--- a/_posts/interviews/2023-03-14-DB.md
+++ b/_posts/interviews/2023-03-14-DB.md
@@ -237,4 +237,10 @@ InnoDB在默认的RR（可重复读）隔离级别下使用MVCC+Next Key Lock防
 
 分表后带来的问题是join连接比较麻烦，事务操作无法保证，如何生成全局唯一的主键id
 
----
+### redo log，undo log， Read View，两阶段提交，MVCC 机制？
+
+### mysql提供了哪些机制实现事务？
+1. 锁机制保证事务的隔离性
+2. 多版本并发控制MVCC实现多个事务同时对同一数据进行修改的情况，每个事务都可以看到一个数据的副本
+3. 事务日志：使用事务日志来记录事务的所有操作，如果系统崩溃，可以使用事务日志来恢复数据。
+
