--- a/_posts/interviews/面经/2023/2023-05-11-字节.md
+++ b/_posts/interviews/面经/2023/2023-05-11-字节.md
@@ -12,7 +12,7 @@ tags:
 很好，有耐心，结束的时候会给建议
 ### mysql表join连接的过程是什么样的？执行步骤是什么样的？会有什么样的问题？
 - 当关联条件的列是被驱动表的索引时，是可以使用join的。
-- 但是当使用的是分块嵌套查询时，扫描行数是两张表函数的乘积，扫描行数非常大，会占用大量的系统资源，这个时候是不建议使用join的。
+- 但是当使用的是分块嵌套查询时，扫描行数是两张表行数的乘积，扫描行数非常大，会占用大量的系统资源，这个时候是不建议使用join的。
 - 如果要使用join，一定要使用小表作为驱动表。什么样的是小表呢？同一条件下两张表哪个检索的数据量小，那张表就是小表。
 - 什么是驱动表？当指定了连接条件时，满足条件并记录行数少的表就是驱动表。
 
