--- a/_posts/interviews/面经/2023/2023-05-30-科大讯飞1.md
+++ b/_posts/interviews/面经/2023/2023-05-30-科大讯飞1.md
@@ -23,6 +23,12 @@ tags:
 
 
 ### 数据倾斜？
+1.现象：绝大多数task执行很快，某个task执行很慢
+2.发生原理：在进行shuffle的时候，必须将相同的key拉到同一个节点上处理，比如按key聚合或join操作，此时如果某个数据量很大的话，就会发生数据倾斜。
+3.定位导致倾斜的代码：可以再yarn-cluster上的spark web ui上查看task执行情况，耗时，数据量等。
+一般只要看到Spark代码中出现了一个shuffle类算子（比如group by语句），那么就可以判定，以那个地方为界限划分出了前后两个stage。
+4.查看key的分布情况：可以在Spark作业中加入查看key分布的代码，比如RDD.countByKey()。
+5.采用随机前缀：将这个key对应的每条数据加随机前缀，将分散后的key分散到不同节点上，再join一起。
 
 
 ### 为什么有shuffle
