--- a/_posts/interviews/面经/2023/2023-06-01-小黑盒.md
+++ b/_posts/interviews/面经/2023/2023-06-01-小黑盒.md
@@ -44,13 +44,18 @@ kill会给进程发送SIGTERM信号，要求它优雅地停止服务。如果服
 
 
 ### 事务特性？i是啥？
-
+原子性
+一致性
+隔离性
+持久性
 
 ### 用redis实现分布式锁？
 
 
 ### 进程僵尸进程和xxx进程区别？
+僵尸进程就是指，一个子进程已经执行完了任务，并调用了exit函数，但是它的父进程没有回收资源，导致子进程的资源描述符还在进程表中，只剩下空壳进程的状态。
 
+处理僵尸进程的方法就是使用wait()或waitpid()方法，对子进程资源进行回收，并从进程表中删除。
 
 ### 更新缓存策略？
 先删缓存
