--- a/_posts/interviews/2023-03-13-OS.md
+++ b/_posts/interviews/2023-03-13-OS.md
@@ -58,7 +58,11 @@ tags:
 - Shared Memory（共享内存）：共享内存可以让多个进程访问同一块内存空间，需要依靠同步操作，比如互斥锁、信号量机制。
 - Sockets（套接字）：套接字主要是支持TCP/IP的网络通信的基本操作单元，用于不同主机之间的进程进行通信。
 
----
+管道
+共享变量
+消息队列
+套接字
+RMI
 
 ### 线程间的同步方式？
 
@@ -66,7 +70,13 @@ tags:
 - Semaphore（信号量）：
 - Event（事件）：
 
----
+互斥锁
+条件变量
+信号量
+读写锁
+轮询
+
+
 
 ### 进程的调度算法
 
