--- a/_posts/interviews/2025-03-30-MyBatis.md
+++ b/_posts/interviews/2025-03-30-MyBatis.md
@@ -124,6 +124,32 @@ INSERT INTO users (name, age) VALUES
 ---
 ### 十二、MyBatis中的动态数据源是什么？如何使用动态数据源？
 
+1. 在yaml配置文件中配置多个数据源
+2. 通过继承AbstractRoutingDataSource类创建动态数据源类，实现动态数据源切换逻辑
+3. 创建一个工具类来管理当前线程的数据源标识
+4. 配置动态数据源Bean
+5. 使用注解切换数据源
+- 定义注解
+- 创建切面类
+- 使用注解
+6. 如果需要读写分离，则进一步扩展动态数据源逻辑，根据sql类型自动选择数据源，使用拦截器获取sql类型
+
 ---
 ### 十四、MyBatis中的数据库连接池是什么？如何配置数据库连接池？
+
+MyBatis本身并不直接提供连接池实现，而是依赖于第三方库，比如HikariCP、C3P0、DBCP或直接使用JDBC的连接池
+
+数据库连接池的作用是：
+- 提高性能：可以复用已有的连接，较少创建和销毁数据库连接
+- 资源管理：连接池一般会设置最大连接数，避免连接过多；
+- 配置灵活：可以配置参数，比如超时时间、最大连接数，优化数据库连接的使用。
+
+有哪些数据库连接池：
+- Druid：阿里巴巴的高性能连接池
+- HikariCP：spring boot默认推荐的连接池
+- C3P0
+- DBCP
+
+如何配置：在yaml配置文件中spring.datasource.druid
+
 
