--- a/_posts/interviews/2023-03-14-Redis.md
+++ b/_posts/interviews/2023-03-14-Redis.md
@@ -136,17 +136,20 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 ### Redis的几种部署方式？
 
+
 ### 缓存更新策略有哪几种？内存淘汰机制？
-- volatile-lru
-- volatile-ttl
-- volatile-random
-- allkeys-lru
-- allkeys-random
-- no-eviction
+数据淘汰策略是指达到内存限制时，决定哪些数据应该被移除，释放空间，
+
+- volatile-lru：仅针对设置了过期时间的键，使用LRU算法进行淘汰；
+- volatile-ttl：从设置了过期时间的键中，优先淘汰剩余时间最短的键；
+- volatile-random：从设置了过期时间的键中随机选择键进行淘汰；
+- allkeys-lru：从所有键中选择最近最少使用的键淘汰
+- allkeys-random：随机选择键进行淘汰，不考虑访问频率和过期时间；
+- no-eviction：当内存达到最大限制时，不再处理写请求，读请求可以继续处理；
 
 4.0版本后增加了两种：
-- volatile-lfu
-- allkeys-lfu
+- volatile-lfu：仅针对设置了过期时间的键，使用LFU算法进行淘汰；
+- allkeys-lfu：从所有键中选择最不经常使用的键淘汰；
 
 ### 常见的缓存读写策略有哪些？
 
@@ -251,20 +254,31 @@ redisson.shutdown();
 redis支持管道，客户端可以一次发送多条命令，最后一起读取返回结果，这样只需要一次网络开销，速度就会得到提升，主要是解决网络io的性能问题。
 
 ### redis的Lua脚本是什么？怎么使用？
-Lua脚本是一种编写在redis服务器上的脚本语言，用于执行一系列的redis命令。
+Lua脚本是一种在redis服务器端执行的脚本语言，用于执行一系列的redis命令。
 可以用于实现事务、锁、计数器等功能
+
+怎么使用：在客户端Jedis中调用eval、直接执行EVAL命令
 
 ### redis的Lua脚本配合set nx命令实现分布式锁？
 脚本放在redis服务端，客户端通过EVAL命令执行脚本，获取锁。
 
+### redis的发布/订阅模式是什么？怎么使用？
 
-### redis的发送/订阅模式是什么？怎么使用？
+是一种消息通信模式，发布者将消息发送到一个或多个频道，订阅者监听特定频道的消息。
 
+- SUBSCRIBE channel [channel...] 订阅给定的一个或多个频道；
+- PUBLISH channel message 向指定频道发送消息；
+- UNSUBSCRIBE [channel [channel]] 停止接收指定频道的消息。
 
 ### redis的限流是什么？如何实现限流？
-限流算法有：
-1. 漏斗算法
-2. 令牌桶算法
+
+是控制访问速率的机制，防止某个资源被过度使用，比如API、数据库查询。用于流量控制、服务降级。
+
+Redis中的限流算法有：
+1. 漏斗算法：请求进入漏斗，但是以固定的速率被处理，请求量过大，就会被丢弃，可以用List存储请求；
+2. 令牌桶算法：有一个固定容量的桶，系统以一个固定的速率向桶中添加令牌，每当一个请求到来时，需要从桶中取走一个令牌，如果没有了令牌，就拒绝该请求；
+3. 计数器法：维护一个计数器记录一段时间内的请求数量，一旦请求数超过了阈值，就拒绝后续请求；
+4. 基于滑动窗口的日志计数法：可以通过有序集合ZSET存储请求的时间戳，然后计算特定时间窗口内的请求数量。
 
 - 单机限流可以使用Guava的RateLimiter对某个接口实现限流。
 
@@ -272,9 +286,11 @@ Lua脚本是一种编写在redis服务器上的脚本语言，用于执行一系
 
 ### 如何保证redis高可用性？
 
-1. 主从复制
-2. sentinel集群
-3. redis cluster分片：数据分片、多副本机制
+1. 持久化：保证服务意外停止后，数据还能被恢复；
+2. 主从复制：是Redis高可用的基础，通过多个节点分担读负载，提供数据冗余。主节点负责处理写操作，将数据同步到从节点；从节点只负责读操作，分担读压力；
+3. sentinel集群：哨兵模式用于监控Redis节点状态，在主节点出现故障时候能自动进行故障转移。
+4. 集群模式：数据分片（数据分布在多个主节点上，每个主节点只负责一部分数据）、多副本机制
+5. 多机部署和容灾：同城双活、异地多活。
 
 ### Redis的主从复制是什么？如何实现主从复制？
 是指redis可以配置多个从数据库，和主数据库保持同步，实现数据读写分离。主数据库可以读写操作，从数据库一般只读。这样可以分散读请求的压力。
