--- a/_posts/interviews/2023-03-14-Redis.md
+++ b/_posts/interviews/2023-03-14-Redis.md
@@ -202,6 +202,7 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 2. 解锁：然后解锁的话需要确保只有持有锁的客户端才能删除锁，所以需要结合Lua脚本实现删除锁的操作。del key
 
 ```java
+
 String luaScript = "if redis.call('GET', KEYS[1]) == ARGV[1] then " +
                    "return redis.call('DEL', KEYS[1]) " +
                    "else return 0 end";
@@ -214,6 +215,7 @@ if (result != null && result == 1) {
 } else {
     // 解锁失败（锁不属于当前客户端）
 }
+
 ```
 
 **注意事项：**
@@ -221,7 +223,9 @@ if (result != null && result == 1) {
 2. 防止误删锁：每个客户端在加锁时生成唯一的值，解锁的时候需要验证自己加的锁，确保不会误删其他客户端的锁；
 
 **使用Redisson实现分布式锁的过程**
+
 ```java
+
 Config config = new Config();
 config.useSingleServer().setAddress("redis://127.0.0.1:6379");
 
@@ -304,7 +308,7 @@ Redis中的限流算法有：
 
 **如何配置从服务器**
 
-修改从服务器的redis.conf配置文件：slaveof <主服务器ip> <主服务器端口>
+修改从服务器的redis.conf配置文件：slaveof 主服务器ip 主服务器端口
 
 ### redis哨兵(Redis Sentinel)是什么？如何使用哨兵？
 
