--- a/_posts/interviews/2023-03-09-DDD.md
+++ b/_posts/interviews/2023-03-09-DDD.md
@@ -14,3 +14,12 @@ tags:
 
 ### 什么是领域驱动模型？
 
+DDD是一种软件开发的方法，强调将设计与核心业务紧密结合。
+
+核心概念：
+1. 领域：软件所要解决的特定义务范围内的知识体系；
+2. 子域：将一个大领域划分成更小、更易于管理的部分，叫做子域，子域通常包括核心域、支撑子域和通用子域；
+3. 有界上下文(Bounded Context)：指定了一个特定模型的应用范围。在这个范围内，模型中的术语、功能和规则都有一致的理解；
+4. 上下文映射(Context Mapping)：描述了不同有界上下文之间如何交互。常见的关系类型包括共享内核、客户/供应商、遵从者等；
+
+
