--- a/_posts/interviews/2023-03-13-OS.md
+++ b/_posts/interviews/2023-03-13-OS.md
@@ -10,129 +10,140 @@ tags:
   - OS
 ---
 
-# 操作系统面试题
-
 ---
-
 ### 用户态和内核态（系统态）？系统调用？
 
 操作系统会根据进程访问资源的特点分成用户态和内核态。
 
-- 用户态运行的进程能够读取用户程序的资源；
-- 内核态运行的程序几乎可以访问计算机的任何资源，不受限制；
+- 用户态运行的进程能够读取用户程序的资源，但是不能直接访问硬件或内存地址空间；
+- 内核态运行的程序几乎可以访问计算机的任何资源，不受限制，包括CPU指令集、内存管理单元、外部设备；操作系统内核，驱动程序运行在内核态；
 
-用户态的程序如果需要使用内核态的子功能的话，就需要使用系统调用实现。
-系统调用的功能主要是对一些底层资源进行控制，比如文件管理、进程管理、内存管理这些。
+系统调用是用户程序与操作系统之间的一个接口，用户态的程序如果需要使用内核态的子功能的话，就需要使用系统调用实现。
+
+系统调用的功能主要是对一些底层资源进行控制，比如文件管理（文件打开、关闭、读取、写入）、进程管理（创建、终止）、内存管理这些。
 
 ---
-
 ### 进程和线程
 
-- 进程是资源分配管理的基本单元，线程是程序运行的基本单元；
+- 进程是资源分配和调度的基本单元，线程是程序运行的基本单元；
 - 进程内可以有多个线程，多个线程共享进程内资源；
 - 进程之间基本是独立的，但是同一个进程内的线程可能会互相影响。
 
 ---
- 
 ### 进程状态
 
-- new
-- ready
-- running
-- waiting
-- terminated
+1. new新建
+2. ready就绪
+3. running运行
+4. waiting/Blocked阻塞
+5. terminated终止
+6. Suspended挂起
 
 ---
-
 ### 线程状态
 
+1. 新建状态：线程对象已经被创建
+2. 可运行：调用了start方法，可以被调度器选中来获取CPU时间片，但并不一定正在运行，只是表示可以被运行
+3. 运行：获得CPU时间片
+4. 阻塞：等待获取某个锁，或调用了阻塞方法
+5. 等待：调用了wait(),join()方法
+6. 计时等待:调用了Thread.sleep(long)，Object.wait(long),带有超时机制
+7. 终止：完成run方法中所有指令。
+
 ---
+### 进程间通信(IPC,inter-process communication)方式？
 
-### 进程间的通信方式？
+1. 管道
+- 匿名管道Pipes:主要用于具有父子关系的进程之间通信，提供了一个单向的数据流；
+- 有名管道Named Pipes:允许没有亲缘关系的进程之间进行通信；
+2. 信号Signal:一种异步通知机制，用于通知进程某个事件已经发生，比如中断处理、异常报告；
+3. 信号量Semaphore：信号量是一个计数器，用于多进程对共享数据的访问，主要用于解决与同步相关的问题，避免竞争条件。
+4. 套接字Sockets：套接字主要是支持TCP/IP的网络通信的基本操作单元，用于网络上不同主机之间的进程进行通信。
+5. 消息队列Message Queue：通过消息队列发送和接收消息
+6. 共享内存Shared Memory：共享内存可以让多个进程访问同一块内存空间，需要依靠同步操作，比如互斥锁、信号量机制。
+7. 文件：最简单直接，但是效率最低。
 
-- Pipes（管道/匿名管道）：
-- Named Pipes（有名管道）：
-- Signal（信号）：
-- Message Queuing（消息队列）：
-- Semaphores（信号量）：信号量是一个计数器，用于多进程对共享数据的访问，主要用于解决与同步相关的问题，避免竞争条件。
-- Shared Memory（共享内存）：共享内存可以让多个进程访问同一块内存空间，需要依靠同步操作，比如互斥锁、信号量机制。
-- Sockets（套接字）：套接字主要是支持TCP/IP的网络通信的基本操作单元，用于不同主机之间的进程进行通信。
-
-管道
-共享变量
-消息队列
-套接字
-RMI
-
+---
 ### 线程间的同步方式？
 
-- Mutex（互斥量）：
-- Semaphore（信号量）：
-- Event（事件）：
-
-互斥锁
-条件变量
-信号量
-读写锁
-轮询
-
-
-
-### 进程的调度算法
-
-- FCFS
-- SJF（短作业优先）
-- 时间片轮转调度算法
-- 多级反馈队列调度算法
-- 优先级调度
+1. 互斥锁Mutex：最基本的同步机制，确保任意时刻只有一个线程可以访问资源；Java提供的Lock类、Synchronized关键字；
+2. 信号量Semophore：控制同时访问某一特定资源的线程数量，限制对某些资源的最大并发访问数；比如数据库连接池管理；
+3. 条件变量Condition Variable：条件变量允许线程等待某个条件成立后继续执行，通常与互斥锁结合使用；生产者-消费者问题；wait()signal()
+4. 读写锁Read-Write Lock:允许多个读操作同时进行，但是在写操作期间禁止其他读或写操作；比如对缓存的管理；
+5. 原子变量Atomic Variables：原子变量的操作是不可分割的整体，能够避免竞争条件，比如Java中的AtomicInteger、AtomicLong、AtomicReference等提供了对基本类型及引用类型的原子操作支持；计数器、标志位
+6. 线程局部存储TLS：为每个线程提供独立的数据副本；
 
 ---
+### 进程的调度算法
 
+决定进程在就绪态获取CPU时间片的机制。
+
+1. 先来先服务FCFS：平均等待时间长；
+2. 最短作业优先/最短剩余时间优先SJF（短作业优先）：总是选择预计运行时间最短的进程执行。可能导致长任务长期得不到执行。
+3. 优先级调度：为每个进程分配一个优先级，选当前最高优先级的进程执行。
+4. 时间片轮转调度算法Round Robin：给每个进程分配固定的时间片，轮流使用CPU。时间片太短会增加上下文切换开销，太长会退化成FCFS。
+5. 多级反馈队列调度算法：设置多个队列，每个队列有不同的优先级和时间片大小，新创建的进程首先放入最高优先级队列，如果在该队列内未完成，则降级到较低优先级队列；
+6. 带权周转时间最少优先：不仅考虑作业长度，还考虑权重。以最小化加权平均周转时间为目标。
+
+---
 ### 什么是死锁？死锁的四个必要条件？如何解决死锁？
 
-多个进程/线程同时被阻塞，同时等待资源释放，导致进程/线程无限期阻塞等待，程序无法正常终止。
+死锁是指多个进程在执行过程中，由于竞争资源造成的一种阻塞现象。每个进程都在等待其他进程释放资源，而这些资源又被其他进程占用，导致进程/线程无限期阻塞等待，程序无法正常终止。
 
-- 互斥；
-- 占有并等待；
-- 非抢占；
-- 循环等待；
+四个必要条件：
+- 互斥：资源只能被一个进程使用
+- 占有并等待：进程已经持有某些资源，但又请求新的资源，而新的资源又被其他进程占用，导致进程进入等待状态，同时不释放已持有的资源
+- 非抢占：已分配给进程的资源不能被强制剥夺，必须由进程主动释放
+- 循环等待：存在一个进程链条，形成一个循环等待
 
 解决死锁的方法：
 - 预防：限制并发进程同时对资源的请求，可以通过静态分配策略，一次性申请全部所需资源。
-- 避免：允许同时存在四个必要条件，但是要掌握每个进程的资源申请情况，作出正确的选择。比如用银行家算法避免系统进入不安全状态。
-- 检测：系统定时执行一个"死锁检测"程序，判断系统是否出现死锁情况，在采取措施解除死锁。检测方式可以用进程-资源分配图判断，判断是否有环，并且每个资源类仅有一个资源。
-- 解除：解除方式有立即结束所有进程执行；撤销涉及死锁的进程；逐个撤销涉及死锁的进程；抢占资源，重新分配。
+- 避免：使用算法动态地检查资源分配状态，确保系统不会进入死锁状态。比如用银行家算法避免系统进入不安全状态。
+- 检测：系统定时执行一个"死锁检测"程序，判断系统是否出现死锁情况，再采取措施解除死锁。可以构建资源分配图检查是否存在环路。
+- 解除：当检测到死锁后，采取措施解除死锁。解除方式有立即结束所有进程执行；撤销涉及死锁的进程；逐个撤销涉及死锁的进程；抢占资源，重新分配。
 
 ---
-
 ### 常见的几种内存管理机制？
 
-- 快式管理
-- 页式管理
-- 段式管理
+- 块式管理
+- 分页存储管理：把内存划分为等大小的页框(Frame)，进程的逻辑地址空间划分为同样大小的页面(Page)，进程运行时，页面会被加载到页框中。支持虚拟存储技术；
+- 分段存储管理：将进程按逻辑划分为不同的段(代码段、数据段、堆栈段)，每个段有独立的内存空间。
+- 段页式存储管理：结合分页和分段，先将进程按逻辑分成多个段，然后对每个段再进行分页。
 
 ---
-
-### 快表和多级页表
-
----
-
 ### 分页机制和分段机制的共同点和区别？
 
----
+1. 共同点：都是用于内存管理的技术，都支持虚拟内存；
 
+2. 区别：
+- 分页将物理存储分割成固定大小的块，称为页框page frame，同时将逻辑存储也分成相同大小的块，称为页page；
+- 分段基于逻辑划分成代码段、数据段，每一段的长度是可变的。
+
+---
+### 快表和多级页表
+
+1. 快表：TLB(Translation lookaside buffer)是一种缓存，用来存储最近使用过的虚拟地址到物理地址的映射关系。加快内存访问。
+2. 多级页表：为了减少用于地址映射的内存开销而采用的一种数据结构组织的方式。
+
+---
 ### 逻辑地址和物理地址
 
----
+1. 逻辑地址是程序运行时使用的虚拟地址，由CPU或编译器生成，是进程的私有地址空间，
+2. 物理地址是内存单元的实际地址，直接对应于计算机的物理内存，用于实际的数据存储和访问
 
-### 为什么需要虚拟地址空间？
-
----
-
-### 什么是虚拟内存？
+> 逻辑地址和物理地址之间的转换由操作系统的内存管理单元完成。
 
 ---
+### 什么是虚拟内存？优点？
 
+虚拟地址空间为每个进程提供一个独立的地址空间来实现内存管理。可以让程序一个连续的地址空间，可以用磁盘空间扩展物理内存。
+
+1. 允许更大的地址空间
+2. 内存保护：每个进程都有自己的虚拟地址空间，防止不同进程相互干扰
+3. 隔离性：如果多个进程直接共享物理内存，可能会访问到其他进程的数据，导致安全漏洞
+4. 简化内存管理：虚拟地址空间一般是连续的地址空间，
+
+---
 ### 页面置换算法？
 
 - OPT（最佳页面置换算法）：没法实现
