--- a/_posts/interviews/2023-03-14-DB.md
+++ b/_posts/interviews/2023-03-14-DB.md
@@ -15,93 +15,184 @@ tags:
 - truncate：清空所有数据，但不会删除表结构；
 - delete：可以删除某一行，如果不指定where条件，则和truncate一样不会删除表结构；
 
-同时drop和truncate是DDL语句，操作立即生效，原数据不放到rollback segment中，不能回滚，操作不触发trigger。而delete语句是DML语句，操作会放到rollback segment中，事务提交之后才生效。
+> 同时drop和truncate是DDL语句，操作立即生效，原数据不放到rollback segment中，不能回滚，操作不触发trigger。
+> 而delete语句是DML语句，操作会放到rollback segment中，事务提交之后才生效。
 
+---
 ### NoSQL有几种类型？
-- 键值：Redis
-- 文档：MongoDB
-- 图形：Neo4j
-- 宽列：HBase
+- 键值：Redis，适合快速查找的场景，比如缓存系统
+- 文档型：MongoDB，扩展了键值存储的概念，允许迁入更复杂的数据结构，比如JSON、XML
+- 图数据库：Neo4j，适合社交网络分析、推荐引擎，存储具有高度互联关系的数据
+- 宽列：HBase，以列为单位存储数据。
 
+---
 ### 常见的字符集
-不同的字符集通常表示这种字符集可以表示的字符范围和编码方式的不同。
-- ASCII：表示128个字符，不能表示中文。ASCII扩展字符集可以表示256个字符
-- UTF-8：使用最广的编码，包含世界上所有字符。
-- GBK：可以看作GB2312的扩展，收录2万多个汉字
+不同的字符集通常表示这种字符集可以表示的**字符范围**和**编码方式**的不同。
+- ASCII：使用7位二进制表示一个字符。表示128个字符，不能表示中文。ASCII扩展字符集可以表示256个字符
+- UTF-8：使用1~4个字节表示一个字符。使用最广的编码，包含世界上所有字符。
 - GB2312：收录6700个汉字，生僻字和繁体字没法表示。对于英文字符，GB2312和ASCII码相同，对于非英字符，需要2字节编码
+- GBK：可以看作GB2312的扩展，收录2万多个汉字
 
+---
 ### MySQL基础架构
 MySQL主要由连接器、分析器、优化器、执行器、存储引擎组成。
 
-- 连接器：主要进行身份认证和检查权限；
-- 分析器：分析器会对SQL语句进行检查，查看是否正确；
-- 优化器：优化器会选择最优的方案执行SQL语句；
-- 执行器：负责执行语句，从存储引擎返回数据；
+- 连接/线程处理：主要进行连接管理、身份认证和检查权限；
+- 解析器：负责解析SQL语句，验证语法和语义的正确性
+- 优化器：优化器会选择最优的执行计划执行SQL语句；决定表的访问顺序、索引的选择；
 - 存储引擎：主要负责数据的存储和读取，支持InnoDB、MyISAM、Memory等多种存储引擎。
 
+---
 ### InnoDB和MyISAM区别？
 MyISAM不支持行级锁和事务，而且崩溃后无法安全恢复。
 
 - InnoDB支持表的行级锁，MyISAM只支持表级锁，所以并发能力上InnoDB比MyISAM更优秀；
 - InnoDB支持事务，定义了四种隔离级别，MyISAM不支持事务。
 - MyISAM不支持外键，InnoDB支持
-- MyISAM不支持MVCC，InnoDB支持
+- MyISAM不支持MVCC(多版本并发控制)，InnoDB支持
 - MyISAM不支持数据库异常崩溃后的安全恢复，InnoDB支持
 - InnoDB的性能比MyISAM更强大
 
+---
 ### MySQL日志有哪些？如何工作的？redo日志和undo日志区别？实现什么效果，为什么要加日志？
-- binlog：实现主从复制、数据备份
-- redo log：保证事务的一致性
-- undo log：保证事务的原子性
+- binlog：记录数据变更的所有操作，实现主从复制、数据备份
+- redo log重做日志：主要作用是确保在发生崩溃的时候能够恢复未完成的事务。确保事务的持久性
+- undo log撤销日志：记录的是数据修改前的原始数据。主要用于支持**事务回滚**以及**实现MVCC**。保证事务的原子性和隔离性
 
+---
 ### MySQL如何支持事务的？一个事务的执行流程是什么样的？如何把一组操作作为事务提交执行？事务回滚是如何回滚的？事务的ACID特性是什么？
+
+如何支持事务：
+- MySQL通过InnoDB存储引擎支持事务。
+
+事务执行流程：
+1. 开始事务：通过START TRANSACTION或BEGIN语句开启一个新的事物；
+2. 执行sql操作：在事务中执行一系列的SQL语句，比如INSERT、UPDATE、DELETE，这些操作并不会立即永久化到数据库中，而是暂时保存在事务日志中；
+3. 提交事务：如果所有操作都成功完成，则使用COMMIT命令将事务所做的更改永久同步到数据库中；
+4. 回滚事务：如果有任何错误，可以使用ROLLBACK命令撤销事务中的所有操作。
+
+事务如何回滚：
+1. 事务执行的时候会把修改的数据、修改前后的值、操作的时间戳信息存放在事务日志里；
+2. 所以回滚的时候，会从事务日志里找到所有记录，这些记录包含事务对数据库做的所有操作；
+3. 然后，数据库系统按照事务日志记录的逆序进行方向操作。
+
 事务的ACID特性：
 - 原子性：原子性表示事务是最小的执行单元，不允许分割，事务的原子性确保事务内的动作要么全部完成，要么全部不起作用。
-- 一致性：
+- 一致性：事务必须使数据库从一种一致状态转换为另一种一致状态。事务在执行过程中不会破坏数据库的完整性约束；主键约束、外键约束、唯一约束；
 - 隔离性：多个用户的事务并发访问数据时，并发事务之间应该是独立的，不能被其他事务干扰；
 - 持久性：一个事务被提交之后，对数据库内的数据的改变应该是持久的，即使数据库发生故障也不应该影响执行结果。
 
+---
 ### 并发事务会带来哪些影响，如何解决？
 - 脏读：一个事务对数据修改，但是还没有提交，这时另一个事务读到了未提交的数据，之后第一个事务又回滚了，导致第二个事务读到的数据是错误的。
-- 不可重复读（Un repeatable read）：一个事务修改数据，另一个事务同时读取两次数据，前后两次读取可能会因为第一个事务的修改导致读取结果不一致。
+- 不可重复读：一个事务修改数据，另一个事务同时读取两次数据，前后两次读取可能会因为第一个事务的修改导致读取结果不一致。
 - 幻读（Phantom read）：一个事务多次读取同一个数据时，由于另一个事务同步修改，导致多次读取的记录条数不一致，重点是读取的记录条数不一致，和不可重复读类似，不可重复读的重点是多次读取的记录的值不一致。
 想要解决幻读，重点是要防止一个事务在读取数据的时候另一个事务删除或新增数据，可以添加表锁+Next key lock
 
 InnoDB在默认的RR（可重复读）隔离级别下使用MVCC+Next Key Lock防止幻读。
 
+---
 ### 事务的四种隔离级别
 - 读未提交（read uncommitted）：最低的隔离级别，允许读取未提交事务的数据变更，会导致脏读、幻读、不可重复读；
-- 读已提交(read committed)：其他并发事务只能读取其他事务已经提交的修改，可以防止脏读，幻读和不可重复读仍然有可能；
-- 可重复读(repeatable-read)：保证同一个事务里面可以多次读取数据，保证多次读取数据是一致的，除非是自己修改的。可以防止脏读和不可重复读问题，但是幻读还是有可能；
+- 读已提交(read committed)：其他并发事务只能读取其他事务已经提交的修改，只可以防止脏读，幻读和不可重复读仍然有可能发生；
+- 可重复读(repeatable-read)：InnoDb的默认隔离界别。保证同一个事务里面可以多次读取数据，保证多次读取数据是一致的，除非是自己修改的。可以防止脏读和不可重复读问题，但是幻读还是有可能；所以InnoDB在这个隔离级别下使用MVCC+Next Key Lock防止幻读
 - 串行化(serializable)：所有事务串行执行。最高的隔离级别，可以防止脏读、不可重复读和幻读。
 
+MVCC：为每个事务提供了一个一致性视图。每个事务在开始时都会生成一个快照，所有查询都基于这个快照执行，其他事务在此之后提交的修改不会影响当前事物的查询结果。
+因此在同一个事务中，多次执行相同的查询时，结果是一致的，不会出现"不可重复读"或"幻读"，但是不能完全避免幻读。
+
+Next-Key Locking：这时InnoDB默认的锁定策略，结合了**行锁+间隙锁**。
+- 行锁：锁定具体的行数据
+- 间隙锁：锁定索引之间的间隙，防止其他事务在这些间隙中插入新数据
+通过Next-Key Locking，InnoDB能够锁定查询范围内的所有现有数据行以及潜在的插入位置，从而防止其他事务在这些范围内插入新数据。可以有效避免幻读。
+
+---
 ### 并发事务控制方式有哪些？
 - 锁： 写锁和读锁
 - MVCC：多版本并发控制，对一份数据存储多个版本，通过事务的可见性保证事务能看到自己应该看到的版本，
 通常会有一个全局的版本分配器来为每一行数据设置版本号，版本号是唯一的。
 
+---
 ### MVCC在InnoDB中是如何实现的？
 在MVCC中，每个事务在读取数据时会看到一个独立的快照版本，而不是看到其他并发事务正在修改的版本。
 这个快照版本是通过在每个数据行上添加隐藏的版本号来实现的。
 当一个事务开始时，它会记录当前时间戳，然后只能看到所有版本号早于该时间戳的数据行。
 这样，事务可以读取一致性的数据，同时不会被其他并发事务的修改所干扰。
 
+---
 ### MySQL使用哪些锁？
-- 行锁
-- 表锁
+1. 行级锁
+- 记录锁:锁定索引记录，防止其他事务对同一记录进行修改或删除；
+- 间隙锁:锁定索引记录之间的间隙，防止其他事务在这个间隙中插入新的记录，从而避免幻读问题；
+- Next-Key Locks:是记录锁+间隙锁的组合，即锁定记录也锁定记录之间的间隙，是InnoDB默认的锁定方式，在可重复读隔离级别下用于防止幻读。
+2. 表级锁
+3. 全局锁：对整个数据库实例加锁，通常用于备份操作
 
+---
 ### InnoDB有几种行锁？
-- record lock（记录锁）：会锁定单个行
-- gap lock（间隙锁）：会锁定一个范围，不会锁定行记录本身
-- next-key lock（临键锁）：会锁定一个范围，也会锁定这个范围内的记录本身。主要是为了解决幻读问题，避免其他并发事务插入新记录。
+- 记录锁record lock：会锁定单个行
+- 间隙锁gap lock：会锁定一个范围，不会锁定行记录本身
+- 临键锁next-key lock：会锁定一个范围，也会锁定这个范围内的记录本身。主要是为了解决幻读问题，避免其他并发事务插入新记录。
 
+---
 ### InnoDB存储引擎底层使用的数据结构是什么？B+树有什么特点？为什么使用B+树？
+B+树
 
+B+树特点：
+1. 所有数据都在叶子节点上：非叶子节点只存储键值和指向下一个节点的指针；
+2. 叶子节点之间有链接：B+树的叶子节点是顺序连接的，通常是双向链表，可以方便地实现范围查询；
+3. B+树每个节点有很多子节点，减少了树的高度。减少了磁盘IO次数；
+4. 平衡树结构：从根节点到任何一个叶子节点的距离都是相同的，确保每次查找、插入或删除的时间复杂度都是O(logn).
+
+为什么使用B+树：
+1. 优化磁盘IO性能：减少了磁盘IO操作的次数；
+2. 支持高效的范围查询：叶子节点顺序相连；
+
+---
 ### 什么是聚簇索引？
 聚簇索引将数据存储在索引中，而不是独立的数据页中。可以提高查询效率
+- 聚簇索引通常基于主键；
+- 如果表没有主键，InnoDB会选择一个唯一的非空列作为聚簇索引；如果连这样的列都没有，InnoDB会隐式创建一个6字节的ROWID作为主键；
 
+InnoDB中的聚簇索引：
+- 非叶子节点：存储索引键值以及指向叶子节点的指针。这些节点不存储实际的数据行，只用于定位数据；
+- 叶子节点：存储索引键值以及对应的实际数据行(完整数据记录)。每个叶子节点还包含指向相邻叶子节点的指针，用于支持范围查询；
+
+聚簇索引特点：
+- 数据按主键排序：表中的数据行按照主键的顺序存储，因此通过主键访问数据时非常高效；
+- 快速范围查询：
+- 主键唯一性：主键必须唯一，因为它是聚簇索引的键值。
+
+聚簇索引的优势：
+- 数据访问高效:数据行直接存储在B+树的叶子节点上，通过主键访问数据只需一次B+树查找
+- 范围查询快速:
+- B+树高度较低，减少了磁盘IO次数
+
+聚簇索引的缺点：
+- 如果主键频繁更新，会导致重新组织聚簇索引，增加维护成本；主键应尽量选择单调递增的值(比如自增ID);
+- 通过辅助索引查询数据时，需要先找到主键值，再通过聚簇索引查找实际数据。
+
+---
 ### MySQL有哪些索引？
 
+1. **主键索引**:每张表只能有一个主键；一种特殊的唯一索引，要求索引列的值唯一且非空；InnoDB使用主键作为聚簇索引的基础；
+2. **唯一索引**:索引列的值唯一，但允许有空值；一个表可以有多个唯一索引；
+3. **普通索引**:最基本的索引类型，没有任何限制条件；适用于加速查询操作；
+4. 全文索引:专门用于全文索引，支持复杂的文本匹配查询；适用于大文本字段，比如varchar、text
+5. 多列索引:组合索引或复合索引，在多个列上创建的一个索引；创建时需要注意索引列的顺序；通过对多个列创建索引优化查询性能，查询条件涉及多个列的时候；
+6. 空间索引:用于地理空间数据类型Geometry类型的索引
+7. 覆盖索引:不是一个独立的索引类型，指的是一个索引如果包含了查询所需的所有列，则可以直接从索引中获取数据而无需访问表的数据行。通过索引直接提供查询所需的所有数据
+
+```roomsql
+//创建唯一索引
+CREATE UNIQUE INDEX ON TABLE_NAME (COL1,COL2...);
+//创建普通索引
+CREATE INDEX ON TABLE_NAME (COL1,COL2...);
+```
+
+> 一个组合索引也可以同时是一个覆盖索引，两者并不互斥；
+
+---
 ### 使用索引应该注意什么？
 哪些字段适合做索引？
 - 经常查询的字段
@@ -112,28 +203,45 @@ InnoDB在默认的RR（可重复读）隔离级别下使用MVCC+Next Key Lock防
 使用索引应该注意什么？
 - 经常更新的字段不应该作为索引
 - 每张表最好不超过5个索引，因为mysql优化器会选择最佳的执行计划，会耗时
-- 尽可能建联合索引
-- 避免索引失效
+- 尽可能建组合索引(联合索引)，组合索引要特别注意列的顺序，最常用于查询条件的列应该放在前面；**最左匹配原则**
+- 避免**索引失效**
 
+---
 ### 什么情况下索引会失效？
-- 使用select * 
-- 创建了组合索引但是查询条件未遵循最左匹配原则
-- 在索引列上进行计算，使用函数、类型转换等操作
-- 以%开头的like查询
+- 使用select * ,如果一个查询返回表中大部分的数据行，MySQL优化器会认为**全表扫描比使用索引更高效**
+- 创建了组合索引但是查询条件未遵循**最左匹配原则**
+- 在索引列上进行计算，**使用函数、类型转换、数学运算**等操作
+- **以通配符开头的like查询**，比如以%或_开头；
 - 使用or的时候，如果有一个字段没有索引，会导致其他字段的索引失效
-- 发生隐式转换（操作符两边类型不一样，比如一定要用双引号表明是字符串：where name="lijia"）
+- 发生**隐式类型转换**（操作符两边数据类型不一样，或字符集不一样，比如一定要用双引号表明是字符串：where name="lijia"）
 
+---
 ### 慢查询sql应该如何排查？如何优化？
-1. 确认慢查询的原因：确认是哪些sql语句导致了慢查询，可以使用mysql的慢查询日志（slow query log）来查看；
+1. 确认慢查询的原因：确认是哪些sql语句导致了慢查询，可以使用mysql的**慢查询日志**（slow query log）来查看；
 2. 分析查询执行计划：使用explain命令来分析查询执行计划（会给出查询类型、表的连接方式、使用的索引信息），
-确定查询语句的优化方向
+确定查询语句的优化方向；关注type(访问类型all全表扫描index索引扫描range范围扫描)、key(实际使用的索引)、rows(扫描的行数)、extra(比如using filesort、using temporary)
 3. 优化查询语句：通过优化查询语句（比如添加索引、使用合适的查询语句等）来提高查询性能
 4. 调整mysql参数：可以通过调整mysql的参数（如缓存大小、连接数（mysql使用连接池））来提高查询性能
 5. 拆分大查询：对于大查询语句，可以考虑拆分成多个小查询语句（分页查询、分区查询、并行查询），以减少查询负载
 6. 使用缓存：使用缓存避免重复查询，提高查询性能
 
+---
 ### sql使用应该注意哪些事项？
 
+1. 索引的合理使用
+- 创建必要的索引：为经常查询、排序、join的列创建索引；
+- 避免过多索引：会增加写操作负担；
+- 尽量设计覆盖索引覆盖所需的所有字段，减少回表操作
+2. 查询时：
+- 尽量使用=而不是like或in这种可能导致全表扫描的操作符
+- 使用limit限制返回的结果数量，特别在分页查询中
+- 避免select *，只返回需要的列，避免全表扫描
+3. 避免在索引上使用函数
+4. 尽量保持事务简短，减少锁定时间
+5. 使用批量插入/更新
+6. 大表考虑使用分区表
+
+---
 ### mysql部署方式有哪些？
 1. 单机部署：
 2. 主从部署
@@ -141,32 +249,51 @@ InnoDB在默认的RR（可重复读）隔离级别下使用MVCC+Next Key Lock防
 4. 集群部署
 5. 云部署
 
+---
 ### 如何使用读写分离(解决读高并发)和分库分表(解决存储压力)提高查询性能
-首先使用主从架构部署多台MySQL服务器，第二步实现主从复制，第三步把写请求发到主服务器，读请求分发到从服务器。
-主写从读，会带来主从不一致问题，
+1. 读写分离
+- 首先使用主从架构部署多台MySQL服务器，
+- 第二步实现主从复制，
+- 第三步把写请求发到主服务器，读请求分发到从服务器。
 
+主写从读，会带来主从不一致问题
+
+2. 分库分表：将大表拆分成多个小表，分为水平分表、垂直分表
+
+---
 ### 主从复制过程
 1. 主库写数据到binlog
 2. 主库创建binlog dump线程，把binlog发送到从库，从库创建IO线程，接收binlog
 3. 从库IO线程接收binlog后写入到relay log中
 4. 从库创建SQL线程读取relay log同步数据
 
+---
 ### 分库分表如何实现
 - 垂直分表：把一个列数比较多的表拆分为多个表；
-- 水平分表：把一个行比较多的表拆分成多个表；
+- 水平分表：把一个行比较多的表拆分成多个表；(按某种规则比如用户id、时间戳)将数据划分到不同的表中。
 
-数据水平分片之后，通过分片算法决定存放在那个表中。可以
+数据水平分片之后，通过分片算法决定存放在那个表中。也可以使用中间件(ShardingSphere，MyCat，Vitess)
 - 哈希分片
 - 范围分片
 - 地理位置分片
 - 融合分片
 
-分表后带来的问题是join连接比较麻烦，事务操作无法保证，如何生成全局唯一的主键id
+分表后带来的问题是join连接比较麻烦，事务操作无法保证，如何生成全局唯一的主键id(UUID、雪花算法、redis生成ID)
 
+> 雪花算法:一种分布式ID生成算法，64位整数 1位符号位+41位时间戳+10位机器ID+12位序列号
+
+---
 ### redo log，undo log， Read View，两阶段提交，MVCC 机制？
 
+---
 ### mysql提供了哪些机制实现事务？
-1. 锁机制保证事务的隔离性
-2. 多版本并发控制MVCC实现多个事务同时对同一数据进行修改的情况，每个事务都可以看到一个数据的副本
-3. 事务日志：使用事务日志来记录事务的所有操作，如果系统崩溃，可以使用事务日志来恢复数据。
+1. ACID特性
+2. START TRANSCATION或BEGIN
+3. COMMIT
+4. ROLLBACK
+5. SAVEPOINT
+6. 事务隔离级别
+7. 锁机制保证事务的隔离性
+8. 多版本并发控制MVCC实现多个事务同时对同一数据进行修改的情况，每个事务都可以看到一个数据的副本
+9. 事务日志：使用事务日志来记录事务的所有操作，如果系统崩溃，可以使用事务日志来恢复数据。
 
