--- a/_posts/interviews/2023-03-14-DB.md
+++ b/_posts/interviews/2023-03-14-DB.md
@@ -15,7 +15,7 @@ tags:
 - truncate：清空所有数据，但不会删除表结构；
 - delete：可以删除某一行，如果不指定where条件，则和truncate一样不会删除表结构；
 
-> 同时drop和truncate是DDL语句，操作立即生效，原数据不放到rollback segment中，不能回滚，操作不触发trigger。
+> 同时drop和truncate是DDL语句，操作立即生效，原数据不放到undo log中，不能回滚，操作不触发trigger。
 > 而delete语句是DML语句，操作会放到rollback segment中，事务提交之后才生效。
 
 ---
