--- a/_posts/interviews/2023-03-14-微服务&RPC.md
+++ b/_posts/interviews/2023-03-14-微服务&RPC.md
@@ -11,69 +11,114 @@ tags:
   - MicroService
   - SpringCloud
 ---
-  
-# 微服务面试题
-
----
 
 ### 微服务和分布式服务有什么区别？Spring cloud和Dubbo分别解决什么问题？
 
+**微服务和分布式服务**：
 
+1. 微服务是基于业务逻辑拆分服务，将单个应用程序划分成一组小的、独立部署的服务，每个服务都可以独立开发、独立部署，可以有自己的技术栈；
+2. 分布式服务是指在多个机器上运行的服务集合，服务分布在不同的节点上，可以根据负载情况增加或者减少服务实例。
 
+> 分布式服务更强调如何有效利用资源，而不是拆分服务；目的是提升性能，提高可靠性；微服务目的是简化应用的开发和维护；
+
+**SpringCloud和Dubbo**：
+1. Spring Cloud
+- 微服务框架，提供完整的分布式解决方案
+
+2. Dubbo
+- 高性能RPC框架，专注于服务调用
+
+---
 ### 微服务有什么框架？对SpringCloud有哪些了解？
 
+微服务架构是一种设计方法，它将单个应用程序划分为一组小的、独立部署的服务。每个服务实现特定的业务功能，并且可以独立地开发、测试、部署和扩展。围绕微服务架构，有许多框架可以帮助开发者构建、管理和维护这些服务。以下是一些流行的微服务框架以及对Spring Cloud的具体介绍：
+
+常见的微服务框架：
+1. **Spring Cloud**：一个基于Spring Boot的微服务解决方案，提供了包括服务发现、配置管理、负载均衡、熔断器等功能在内的全面支持。
+2. **Dubbo**：阿里巴巴开源的高性能Java RPC框架，专注于提供高效的服务治理能力，如服务注册与发现、负载均衡等。
+
+对Spring Cloud的了解：是一系列工具包的集合。
+- **Spring Cloud Config**: 提供了集中化的外部配置管理支持，可以动态刷新配置而不需重启应用。
+- **Spring Cloud Gateway**: 新一代的API网关，替代了旧版的Zuul，提供了更强大的路由功能和更好的性能。
+- **Spring Cloud Consul/etcd/ZooKeeper**: 除了Netflix Eureka之外的其他服务发现选项。
+- Spring Cloud Alibaba: Spring Cloud的一个子项目，专门针对阿里巴巴的产品进行了适配，例如**Nacos**（服务发现和配置管理）、Sentinel（限流降级）等。
+- Spring Cloud Netflix: 包含多个子项目，如Eureka（服务发现）、Hystrix（熔断器）、Ribbon（客户端负载均衡）、Zuul（API网关）等。
+- Spring Cloud Stream: 构建消息驱动微服务的应用框架，简化了与消息中间件（如RabbitMQ, Kafka）的集成。
+- Spring Cloud Sleuth + Zipkin: 分布式追踪系统，帮助跟踪服务之间的调用链路，便于问题排查和性能分析。
 
 ---
-
 ### 一个巨石系统要改造成一个微服务应该怎么做？需要涉及哪些组件？
 
-### Dubbo中的负载均衡策略有？
-
-- RandomLoadBalance：默认采用，根据权重随机选择
-- LeastActiveLoadBalance：优先让活跃数少的服务提供者处理
-- ConsistentHashLoadBalance：一致性哈希负载均衡策略，计算参数的哈希决定
-- RoundRobinBalance：加权轮询负载均衡。如果有两个服务A、B，一个权重是7，一个权重是3。则10次结果A有7次，B有3次；如果是Random的话，A可能有9次，B可能只有1次。
-
+1. 分析系统
+- 将功能分解，划分成多个模块领域，
+- 然后找出模块之间的依赖关系
+- 确定哪些模块是性能瓶颈的部分
+2. 然后按业务功能拆分成多个服务，也可以按技术栈拆分
+3. 然后设计微服务架构，确定需要使用的工具
+- 包括**服务注册发现**：用ZooKeeper或Eureka或者Nacos
+- 用**API网关**提供统一的请求入口，比如用Gateway，
+- 然后可以需要用一些**RPC组件**提供服务之间的调用，或者通过REST调用接口访问，或者通过消息队列按事件驱动
+- 还有一些其他的，比如**配置管理**，可以用Spring Cloud Config、Apollo
+- 还有**负载均衡**，比如Nginx，Nacos(微服务内的负载均衡)、Kubernetes的LoadBalancer/Ingress(服务暴露层面，处理来自外部的请求时使用)
+- 还有**日志和监控**的组件，比如Prometheus+Grafana
 
 ---
+### Dubbo中的负载均衡策略有？
 
+- Random LoadBalance：默认采用，根据权重随机选择
+- LeastActive LoadBalance：优先让活跃数少的服务提供者处理
+- ConsistentHash LoadBalance：一致性哈希负载均衡策略，计算参数的哈希决定
+- RoundRobin LoadBalance：加权轮询负载均衡。如果有两个服务A、B，一个权重是7，一个权重是3。则10次结果A有7次，B有3次；如果是Random的话，A可能有9次，B可能只有1次。
+
+---
 ### Dubbo中支持的序列化方式？
 
 Dubbo默认使用Hessian2
 
+---
 ### 有了HTTP为什么还要用RPC
 RPC通常应用的微服务、分布式架构中，使用HTTP的话每次请求都要建立和断开连接，使用RPC可以使用连接池计数减少连接建立和断开的开销。
 而且RPC使用二进制压缩格式传输数据，比HTTP的文本格式效率要高。
 
-1. 什么是RPC？它的核心原理是什么？
+---
+### 什么是RPC？它的核心原理是什么？
 RPC是远程过程调用，是一种通信协议，可以在分布式系统中调用远程计算机上的函数。
 核心原理就是客户端使用代理层来执行远程过程调用请求，代理层将请求方法和参数打包通过网络传输到远程服务端上，服务端接收请求并处理完之后，
 通过代理层再返回数据给客户端。
-2. Java RPC框架有哪些？请谈谈它们之间的区别和使用场景？
+
+---
+### Java RPC框架有哪些？请谈谈它们之间的区别和使用场景？
 - Thrift支持跨语言；
 - Thrift使用自定义的序列化协议，在网络中传输时可以有效减小数据包的大小，提高了传输效率。
 - Thrift可以使用IDL接口定义语言，生成多种语言的客户端服务端代码
 - Thrift支持异步非阻塞IO，并发性能高
 
-3. 请介绍一下Dubbo框架？如何快速搭建Dubbo服务？
+---
+### 请介绍一下Dubbo框架？如何快速搭建Dubbo服务？
 
-4. 如果你需要将一个Java应用转换为RPC服务，需要做哪些事情？
+---
+### 如果你需要将一个Java应用转换为RPC服务，需要做哪些事情？
 - 定义接口
 - 选用框架
 - 实现客户端和服务器端代码
 - 配置和启动服务
 
-5. 如何实现基于RESTful的RPC调用？
+---
+### 如何实现基于RESTful的RPC调用？
 
-6. 如何处理在RPC调用中出现的网络故障或者服务异常？
+---
+### 如何处理在RPC调用中出现的网络故障或者服务异常？
 - 超时重试或返回特定错误信息
 - 在架构和代码上进行容错处理
 - 针对不同的异常进行异常处理
 
-7. 如何通过RPC调用远程服务并获取返回结果？
+---
+### 如何通过RPC调用远程服务并获取返回结果？
 
-8. 分布式系统中的RPC调用与本地调用有哪些不同点？有哪些考虑因素需要注意？
+---
+### 分布式系统中的RPC调用与本地调用有哪些不同点？有哪些考虑因素需要注意？
 - 网络传输，RPC调用是要通过网络传输的，本地调用是在同一机器上执行
 - RPC需要特定的协议实现序列化反序列化进行传输
 
+---
 ### 要实现自定义一个RPC应该怎么做
