--- a/_posts/interviews/2023-03-14-Java.md
+++ b/_posts/interviews/2023-03-14-Java.md
@@ -547,3 +547,15 @@ mergeSort和TimSort
 
 归并时间复杂度O(nlogn),空间复杂度O(n)，需要辅助数组
 快排平均时间复杂度O(nlogn)，最坏O(n^2)，空间复杂度平均O(logn),最坏O(n)
+
+---
+### 反射
+
+---
+### 编译时生成代理类
+
+---
+### 代码生成
+
+---
+### 字节码增强
