--- a/_posts/interviews/2023-03-14-系统设计.md
+++ b/_posts/interviews/2023-03-14-系统设计.md
@@ -9,57 +9,119 @@ tags:
   - Interview
   - 系统设计
 ---
-  
-# 系统设计面试题
 
 ---
-
-### 如何设计一个twitter系统，系统架构？
-
-
----
-
 ### 缓存雪崩、缓存击穿、缓存穿透 分别表示什么意思？如何解决？
 
-- 缓存穿透：大量请求的数据既不在缓存中，也不再数据库中。解决方法：布隆过滤器（用布隆过滤器先判断请求的数据在不在数据库中）
-- 缓存击穿：热点数据的缓存过期，导致同一时间大量对热点数据的请求直接落到数据库上。解决方法：热点数据用不过期。
+- 缓存穿透：大量请求的数据既不在缓存中，也不再数据库中。解决方法：布隆过滤器（用布隆过滤器先判断请求的数据在不在数据库中）；缓存空对象；参数校验与限流
+- 缓存击穿：热点数据的缓存过期，导致同一时间大量对热点数据的请求直接落到数据库上。解决方法：热点数据永不过期。
 - 缓存雪崩：缓存在同一时间大面积失效，导致大量的请求直接落到数据库上。比如缓存服务器宕机。解决方法：1.采用redis集群 2.限流 3.随机设置缓存失效时间 4. 设置二级缓存
 
-
 ---
-
 ### 项目中如何使用缓存的？如何更新缓存？缓存过期怎么办？
 
----
+本地缓存使用Guava Cache。
 
+分布式缓存使用Redis
+
+缓存策略，什么时候创建缓存：
+1. 读时缓存：查询的时候如果未命中，查询数据库并写入缓存
+2. 写时缓存：在数据写入数据库的同时，同步更新缓存
+
+如何更新缓存：
+1. 写时更新缓存：写入数据库时同步更新缓存
+2. 失效缓存：写入数据库后，删除缓存，下次读取时重新加载数据到缓存
+3. 延迟双删：先删除缓存，再更新数据库，最后再次删除缓存，防止并发问题
+
+缓存过期怎么办：
+1. 设置缓存过期时间
+2. 懒加载：下次请求触发时重新加载数据
+3. 预加载：在缓存即将过期时，提前异步加载新数据
+
+---
 ### 认证和授权
 
+认证：验证用户身份，
 
+授权：每个用户被分配一个角色，每个角色拥有特定的权限
 
 ---
-
 ### Cookie和Session
+两种用于管理用户会话状态的技术。
 
-- Cookie保存在客户端，保存用户信息
-- Session是通过服务端记录用户的状态
+1. Cookie是由服务器发送并在用户的浏览器中存储的小型文本文件。通常包含一些用户特定的信息，比如用户ID，偏好设置；
+2. Session用来跟踪用户的状态，当用户与服务器建立连接时，服务器会创建一个唯一的Session ID，并将这个ID通过Cookie返回给客户端；Session数据存放在服务器端；
+
+- Cookie保存在客户端，保存用户信息，比如偏好设置，购物车内容等。
+- Session是通过服务端记录用户的状态，存储重要敏感信息，比如认证状态，用户角色等。
 
 ---
-
 ### OAuth 2.0
+是一种授权框架，可以不用处理密码，授权另一个应用共享信息。
+
+授权流程：
+1. 授权码模式：最常用的模式，客户端首先将用户重定向到授权服务器，在用户同意后，客户端会从授权服务器收到一个授权码，然后使用授权码换取访问令牌。
+2. 隐式许可类型：
+3. 资源所有者凭据授予：
+4. 客户端凭据授予：
 
 ---
-
 ### 定时任务如何实现？
 
-- Timer
-- ScheduledThreadPoolExecutor
-- Spring @Schedule
-- 时间轮
-
-### RateLimiter限流算法是如何工作的？
-
+1. 单机环境：
+- ScheduledThreadPoolExecutor、ScheduledExecutorService 单机环境
+- Spring @Schedule 单机环境
+2. 分布式环境：
+- Quartz
+- xxl-job
+- dolphinscheduler
+3. 云原生环境：
+- CronJob
 
 ---
+### RateLimiter限流算法是如何工作的？
 
+1. 令牌桶算法：系统以固定的速率向桶中添加令牌，每来一个请求就从桶中取走一个令牌
+2. 漏桶算法：以固定的速率处理请求
+3. 计数器算法：计算每个窗口内的请求数是否超过阈值
 
+---
+### 如何设计一个twitter系统，系统架构？
 
+1. 首先分析功能需求
+- 用户注册和登录
+- 发布推文
+- 关注用户
+- 查看时间线，包括用户自己的推文和关注用户的推文
+- 搜索推文或用户
+- 推送通知（新关注、点赞消息）
+2. 还有一些非功能需求
+- 高并发支持：每秒百万次请求
+- 低延迟：期望快速加载推文和时间线
+- 可扩展性：系统能够动态扩展应对流量高峰
+- 数据持久性和一致性：用户数据不会丢失，尽量保持一致性
+- 容错性：即使部分服务失败，系统仍能正常运行
+3. 系统架构设计
+- 前端层：客户端、API Gateway：负责路由和负载均衡；提供统一的接口给前端调用；处理认证限流和缓存
+- 后端服务：
+  - 用户服务：用户注册、登录和用户信息
+  - 推文服务：推文的增、删、查
+  - 时间线服务：构建用户的时间线
+  - 社交图谱服务：管理用户之间的关注关系
+  - 搜索服务：提供全文搜索功能
+  - 通知服务：实时推送通知
+- 数据存储层
+  - 关系型数据库：存储用户信息、配置数据等结构化数据
+  - NoSQL：存储推文、时间线，Cassandra、MongoDB
+  - 缓存：Redis存热点数据
+  - 搜索引擎：Elasticsearch支持全文搜索
+- 消息队列：用于异步处理任务，如推文发布、通知推送，解耦服务之间的直接依赖
+- 文件存储：对象存储，存储图片、视频，AWS S3，Google Cloud Storage
+- 监控与日志：Prometheus+Grafana监控系统性能；ELK(Elasticsearch,Logstash,Kibana)用于日志收集与分析
+4. 时间线生成策略：
+- 写扩散(write fan-out)：当用户发布一条推文时，将其推送到所有关注者的时间线缓存中
+- 读扩散(read fan-out):当用户查看时间线时，实时从关注用户的推文中合并数据
+5. 性能优化
+- CDN：内容分发网络加速静态资源加载
+- 数据压缩
+- 分页和懒加载
