--- a/_posts/interviews/2023-03-14-DB.md
+++ b/_posts/interviews/2023-03-14-DB.md
@@ -37,14 +37,13 @@ tags:
 ### MySQL基础架构
 MySQL主要由连接器、分析器、优化器、执行器、存储引擎组成。
 
-- 连接/线程处理：主要进行连接管理、身份认证和检查权限；
+- 连接器：主要进行连接管理、身份认证和检查权限；
 - 解析器：负责解析SQL语句，验证语法和语义的正确性
 - 优化器：优化器会选择最优的执行计划执行SQL语句；决定表的访问顺序、索引的选择；
 - 存储引擎：主要负责数据的存储和读取，支持InnoDB、MyISAM、Memory等多种存储引擎。
 
 ---
 ### InnoDB和MyISAM区别？
-MyISAM不支持行级锁和事务，而且崩溃后无法安全恢复。
 
 - InnoDB支持表的行级锁，MyISAM只支持表级锁，所以并发能力上InnoDB比MyISAM更优秀；
 - InnoDB支持事务，定义了四种隔离级别，MyISAM不支持事务。
@@ -66,7 +65,7 @@ MyISAM不支持行级锁和事务，而且崩溃后无法安全恢复。
 - MySQL通过InnoDB存储引擎支持事务。
 
 事务执行流程：
-1. 开始事务：通过START TRANSACTION或BEGIN语句开启一个新的事物；
+1. 开始事务：通过START TRANSACTION或BEGIN语句开启一个新的事务；
 2. 执行sql操作：在事务中执行一系列的SQL语句，比如INSERT、UPDATE、DELETE，这些操作并不会立即永久化到数据库中，而是暂时保存在事务日志中；
 3. 提交事务：如果所有操作都成功完成，则使用COMMIT命令将事务所做的更改永久同步到数据库中；
 4. 回滚事务：如果有任何错误，可以使用ROLLBACK命令撤销事务中的所有操作。
@@ -74,10 +73,10 @@ MyISAM不支持行级锁和事务，而且崩溃后无法安全恢复。
 事务如何回滚：
 1. 事务执行的时候会把修改的数据、修改前后的值、操作的时间戳信息存放在事务日志里；
 2. 所以回滚的时候，会从事务日志里找到所有记录，这些记录包含事务对数据库做的所有操作；
-3. 然后，数据库系统按照事务日志记录的逆序进行方向操作。
+3. 然后，数据库系统按照事务日志记录的逆序进行反向操作。
 
 事务的ACID特性：
-- 原子性：原子性表示事务是最小的执行单元，不允许分割，事务的原子性确保事务内的动作要么全部完成，要么全部不起作用。
+- 原子性：原子性表示事务是最小的执行单元，确保事务内的动作要么全部完成，要么全部不起作用。
 - 一致性：事务必须使数据库从一种一致状态转换为另一种一致状态。事务在执行过程中不会破坏数据库的完整性约束；主键约束、外键约束、唯一约束；
 - 隔离性：多个用户的事务并发访问数据时，并发事务之间应该是独立的，不能被其他事务干扰；
 - 持久性：一个事务被提交之后，对数据库内的数据的改变应该是持久的，即使数据库发生故障也不应该影响执行结果。
