--- a/_posts/interviews/面经/2023/2023-05-12-百度.md
+++ b/_posts/interviews/面经/2023/2023-05-12-百度.md
@@ -26,44 +26,93 @@ Hive和HDFS之间的联系？
 - Hive是基于Hadoop的一个数据仓库工具，提供sql查询功能。可以将sql语句转化为mapReduce任务进行运行。
 - Hive是建立在Hadoop上的数据仓库基础架构，用来进行数据提取转化加载（ETL），是一种可以存储、查询、和分析存储在Hadoop中的大规模数据的机制。可以方便使用sql查询数据。
 
-
+---
 ### spark用到哪些？ mapReduce与Spark区别？
+
+会用到Spark做数据分析，每天会生成看板日报数据。从hive表读取数据，处理之后写入MySQL，然后再看板平台连接MySQL数据源配置看板。
+
+看板上有实时的，也有每天更新的：
+- 实时的会直接在看板平台连接hive源表，通过SQL查询直接配置指标和维度，每次刷新的时候实时返回结果。这种一般是一些总数、重要的数据会用这种方式展示；
+- 每天更新的看板就是通过Spark任务，每天早上生成hive表生成之后，启动Spark任务，执行完之后更新MySQL表，然后展示。这种一般是比较详情的明细数据会用这种方式。
 
 spark是一个大数据分布式处理框架。可以认为是比mapReduce更好更快的模型。
 
-- 执行更快速：通过内存中缓存和优化的查询执行方式
-- 多种语言api：有java、scala、R和Python API
+1. MapReduce每个阶段完成后都会把结果写入磁盘，Spark是把数据保存到内存中的；
+2. MapReduce会把数据写入HDFS，Spark是用RDD记录数据。可以基于RDD重建丢失数据；
+3. 所以MapReduce效率会低很多，Spark效率会更高。
 
+---
 ### python、java、scala什么情况下用什么语言
+1. Python：一般写一些处理表数据的自动化脚本，比如一个表格，读到Python里转成DataFrame，用Numpy比较方便处理；
+2. Java：就是后端的服务基本都是用Java；
+3. Scala：Scala用的Akka框架，比较适合处理并发任务。也会编译成字节码，一般在写Flink任务会用。
 
-### mysql数据库json字段有什么好处，怎么查询json列中某个字段值？text类型有什么区别
+---
+### mysql数据库json字段有什么好处，怎么查询json列中某个字段值？和text类型有什么区别
+
+**JSON字段有什么好处：**
+可以更方便存储半结构数据
+
+**查询json列的某个字段值：**
 ```java
 SELECT id, browser -> '$.name' as browser FROM events;
 ```
 阿里规范里说表的设计不建议使用text类型，效率低。
 browser列是一个json类型的列，json里有一个name字段，上面语句查找出browser里的name字段出来
+
+**json和text有什么区别：**
+- json类型可以更好地查询分析json数据
+- text可以存储更大的文本数据
+
+---
 ### json有什么好处
 - 轻量
 - 解析和存储快
 - 方便接口交互，前后端交互方便
-### sql开窗，group by 不聚合操作怎么得到其他字段
+
+---
+### sql开窗，group by不聚合操作怎么得到其他字段
 聚合函数每组只返回一个值，开窗函数每组可以返回多个值。
+
+---
 ### 联合索引，与分别建立索引有什么优势
+
+**什么是最左匹配原则：**
 联合索引的最左匹配：如果你的sql语句中用到了联合索引中的最左边的索引，那么这条sql语句就可以利用这个联合索引去进行匹配，但是如果遇到了范围查询就会停止匹配。
 
+**为什么会有最左匹配原则：**
 因为联合索引的索引结构里面排在前面的索引字段是全局有序的，排在后面的字段是局部相对有序，就是只有当前面字段固定了，后面的字段才在前面字段固定的基础上是有序的。
 
+**创建联合索引有什么原则：**
 创建联合索引时，where子句中使用最频繁的一列放在最左边，这样区分度最高。
-### 多条件查询的时候为什么要建联合索引而不是建多个单列索引？
-多个单列索引在多条件查询的时候只会生效第一个索引，所以多条件联合查询时最好建联合索引。
-### spark宽依赖、窄依赖
-spark里面有很多函数，比如map、filter、union、join、groupByKey、partitionBy这些，spark中使用的数据集是RDD，就是说这些函数是作用在RDD数据上的，
-- 窄依赖就是指父RDD的每个分区只被一个子RDD分区使用，子RDD分区通常只对应几个父RDD分区，比如一个父RDD对应一个子RDD，就是一对一的依赖关系；
-对应的函数比如有map、filter、union这些。父RDD的分区最多被一个子RDD分区所用。
-- 宽依赖就是指父RDD的每个分区都有可能被多个子RDD分区使用，子RDD通常对应父RDD所有分区。对应的函数有groupByKey，partitionBy这些。子RDD的分区依赖于父RDD的所有分区。
 
+**联合索引与分别建立索引有什么优势：**
+- 建立联合索引的话，如果查询的列都在索引里，可以覆盖索引，只需要查询索引不需要回表查询，效率会更高；
+- 建立联合索引比分别建立索引，索引数量会少，不用维护很多索引；
+- 联合索引有最左匹配原则，所以只要查询条件包含了最左边的列，就可以用到联合索引。
+
+---
+### 多条件查询的时候为什么要建联合索引而不是建多个单列索引？
+同上。
+
+---
+### spark宽依赖、窄依赖
+spark里面有很多函数，比如map、filter、union、join、groupByKey、partitionBy这些，spark中使用的数据集是RDD，就是说这些函数是作用在RDD数据上的。
+
+- 窄依赖就是指父RDD的每个分区最多只被一个子RDD分区使用，比如一个父RDD对应一个子RDD，就是一对一的依赖关系，不需要跨多个节点进行数据shuffle；
+对应的函数比如有map(对每个元素应用一个函数)、filter(根据条件过滤元素)、union(合并两个RDD)这些。父RDD的分区最多被一个子RDD分区所用。
+- 宽依赖就是指父RDD的一个分区可能被多个子RDD分区使用，或者一个子RDD分区依赖父RDD的多个分区，需要跨多个节点重新分配数据。对应的函数有groupByKey，partitionBy这些。
+
+> 可以利用缓存尽量减少不必要的宽依赖。
+
+---
 ### K8s调度任务
 
+k8s中的调度指的是将定义好的pod分配到集群中的合适的节点上运行。
+
+可能会根据资源可用性、节点负载均衡的策略选择。
+
+---
 ### 为什么使用Kafka，可以直接用http调用吗？为什么要加一个Kafka？
 - 解耦：生产者和消费端不需要相互依赖
 - 削峰：打平高峰期的流量，消费端可以以自己的速度处理
