--- a/_posts/interviews/面经/2023/2023-05-12-途虎养车.md
+++ b/_posts/interviews/面经/2023/2023-05-12-途虎养车.md
@@ -7,10 +7,10 @@ categories:
 tags:
   - Interview
 ---
-  
+
 ### 如何优雅停掉一个jvm进程
 
-- 在java进程中注册关闭钩子，在java进程退出之前做一些工作。jvm关闭前，会调用已注册的关闭钩子
+在java进程中注册关闭钩子，在java进程退出之前做一些工作。jvm关闭前，会调用已注册的关闭钩子
 
 ```java
 Runtime.getRuntime().addShutdownHook(new Thread(){
@@ -21,22 +21,37 @@ Runtime.getRuntime().addShutdownHook(new Thread(){
   })
 ```
 
-
+---
 ### guava cache如何提高缓存命中率
 
-### zookeeper集群要多少台机器？
-最少3台，奇数台，只要超过半数的节点正常，集群就能正常提供服务。
+本地缓存
 
+- 合理设置缓存大小，不能太大也不能太小；
+- 使用合适的淘汰策略，guava cache默认使用LRU(最近最少使用)；
+- 设置过期时间，有expireAfterAccess：访问后一段时间没有访问就过期，适合读多写少的场景；expireAfterWrite：写入后一段时间自动过期，适合于数据定期更新的场景；
+- 用CacheLoader自动加载；
+- 统计缓存使用情况；
+- 启动的时候预加载。
+
+---
+### zookeeper集群要多少台机器？
+最少3台，一般是奇数台，可以避免脑裂问题，容错性更好。只要超过半数的节点正常，集群就能正常提供服务。
+
+---
 ### 如何查看问题？
 
-
-### git rebase 什么意思
+---
+### git rebase什么意思
 合并多个commit
 
+---
 ### 版本依赖怎么办
+
 用一个工具叫dependency analyzer插件，会现实冲突的依赖，排除有冲突的依赖。
+
 排除依赖：用exclusions排除子元素
 
+---
 ### cherry pick是什么命令
 
 
