--- a/_posts/interviews/面经/2023/2023-05-13-滴滴.md
+++ b/_posts/interviews/面经/2023/2023-05-13-滴滴.md
@@ -10,15 +10,47 @@ tags:
 
 
 ### 浏览器输入网址流程
+1. 首先浏览器会根据输入的URL，判断是否合法，解析协议、域名、端口号、路径；
+2. 然后需要解析域名，先从本地缓存查找，没有再到DNS服务器里查找ip地址；
+3. 有了ip地址后，建立TCP连接；
+4. 建立了TCP连接之后，浏览器构造HTTP请求报文，发送HTTP请求到服务器；
+5. 服务器处理请求，构造HTTP响应返回给客户端；
+6. 浏览器最后根据返回数据渲染页面。
 
+---
+### 浏览器并行下载资源怎么做
 
+---
 ### DNS做什么工作
+- 域名解析
+- 负载均衡
+- 缓存
 
-
+---
 ### http格式
 
-### 为什么没有端口号
+**http URL格式：**
+协议://域名/路径
 
+**http报文格式：**
+请求：http方法 url路径 http版本 客户端浏览器 编码格式 消息体
+响应：http版本 状态码 描述信息 消息体body
+
+**状态码：**
+- 2xx：成功响应
+- 3xx：重定向
+- 4xx：客户端错误。服务器找不到请求的资源
+- 5xx：服务器错误。服务器阻塞响应、不支持的请求、网关无法接收到响应
+
+---
+### 为什么没有端口号
+HTTP默认端口号80
+
+HTTPS默认端口号443
+
+---
 ### 项目难点？OOM为什么要对数据表做修改？更新会OOM为什么select不会OOM？
 
+---
 ### 反转链表
+
