--- a/_posts/interviews/面经/2023/2023-05-30-科大讯飞1.md
+++ b/_posts/interviews/面经/2023/2023-05-30-科大讯飞1.md
@@ -9,19 +9,42 @@ tags:
 ---
   
 ### reduceByKey与groupByKey有什么区别？
+1. reduceByKey包含了分组和聚合两个操作，groupByKey只是分组；所以一般groupByKey之后还会接一个map操作，对分组后的每个组进行聚合。
+2. 而且reduceByKey在shuffle之前对分区内相同的key的数据集会先进行预聚合，性能会比较高。
 
+```scala
+val words = Array("one", "two", "two", "three", "three", "three")
+val wordPairsRDD = sc.parallelize(words).map(word => (word, 1))
 
-### 大表join小表怎么操作
+val wordCountsWithReduce = wordPairsRDD
+  .reduceByKey(_ + _)
+  .collect()
 
+val wordCountsWithGroup = wordPairsRDD
+  .groupByKey()
+  .map(t => (t._1, t._2.sum))
+  .collect()
+```
 
-### spark深层
+---
+### Spark中大表join小表怎么操作
 
+可以把小表数据变成广播变量，这样每个executor都有小表的数据，然后再大表数据处理的时候，根据大表数据的key从小表广播变量里找对应的数据。
 
+---
 ### 有没有遇到spark任务调优问题？
+**会有哪些问题：**
+- 某个节点OOM了；
+- 执行时间很慢；
 
+**问题如何解决：**
+- 查看task执行的日志，耗时、数据量。
+- 然后判断是发生了什么问题，是数据倾斜、还是网络问题、还是外部IO阻塞的问题。
+
+---
 ### 作业优化问题？
 
-
+---
 ### 数据倾斜？
 1.现象：绝大多数task执行很快，某个task执行很慢
 2.发生原理：在进行shuffle的时候，必须将相同的key拉到同一个节点上处理，比如按key聚合或join操作，此时如果某个数据量很大的话，就会发生数据倾斜。
@@ -30,27 +53,60 @@ tags:
 4.查看key的分布情况：可以在Spark作业中加入查看key分布的代码，比如RDD.countByKey()。
 5.采用随机前缀：将这个key对应的每条数据加随机前缀，将分散后的key分散到不同节点上，再join一起。
 
-
+---
 ### 为什么有shuffle
 
+**什么是shuffle：**
+shuffle就是把多个节点上的同一个key，拉取到同一个节点上，进行聚合或join操作，比如reduceByKey，join操作，都会触发shuffle操作。
 
+**为什么会有shuffle：**
+因为RDD是分布式数据集，数据分布在多个节点上，如果要执行聚合就得把其他节点上的数据通过网络拉取到一起进行操作。
+
+---
 ### 四次挥手
 
-
+---
 ### netstat 什么情况下会有timewait
 
+netstat是查看TCP连接的命令。
+```shell
+# 查看处于TIME_WAIT状态的TCP连接
+netstat -nat | grep TIME_WAIT
+```
 
+**为什么会有TIME_WAIT状态的连接:**
+TCP关闭的过程中客户端最后就是会处于TIME_WAIT状态，为了确保服务端收到了最后的ACK确认，因为如果服务端没有收到ACK确认，服务端会再发一个FIN包，这个时候客户端就可以收到这个FIN包。
+
+**有很多TIME_WAIT状态的TCP连接是什么情况：**
+说明服务器处理了大量的HTTP请求，建立了很多TCP短连接，客户端没有用连接池，或者没有用长连接，也可能导致这个问题。
+
+**怎么处理：**
+1. 调整配置，让服务器可以重用处于TIME_WAIT状态的连接；
+2. 减少TIME_WAIT等待时间；
+3. 客户端使用连接池；
+4. 使用HTTP keep-alive长连接。
+
+---
 ### 线程池参数及策略？
-1. 核心线程数，定义了最小可以同时运行的线程数量
-当队列中存放的任务达到队列容量的时候，当前可以同时运行的线程数量变成最大线程数
-当新任务来的时候会先判断当前运行的线程数量是否达到核心线程数，如果达到的话，新任务就会被存放在队列中。
 
-
+---
 ### 强引用、软引用、弱引用、虚引用
+1. 强引用：最常见的引用类型，所有通过new创建的对象都是强引用。只要对象存在强引用并且可达，那么就不会被垃圾收集器回收。即使系统内存不足，JVM也不会回收这些对象，而是会抛出OOM Error；
+2. 软引用：只有当JVM认为内存不足时，才会回收这些对象。在GC之前，如果认为当前堆内存不足，就会回收软引用指向的对象。
+3. 弱引用：不管内存是否充足，只要发生垃圾回收，对象就会被回收。
+4. 虚引用：是最弱的一种引用关系，而且无法通过虚引用直接访问对象，主要目的是跟踪对象被垃圾回收的状态，在对象被回收前收到通知，但不能阻止对象被回收。主要做一些清理工作，比如释放资源、清除缓存等。
 
+- 强引用：最常见的引用类型；
+- 软引用：可以构建对内存敏感的缓存，允许内存不足时回收；
+- 弱引用：可以直到对象在什么时候被回收的场景；
+- 虚引用：用于在对象被回收前执行某些清理操作。
 
+---
 ### 强引用什么时候回收
+强引用指向的对象只有在不可达状态的时候才会被回收，即使内存不足，也只是会抛出OOM异常，但不会回收，除非手动把引用设置为null，这个时候
+对象变成不可达状态，才会被回收。
 
-### 如果有短暂的大量对象，应该怎么分配内存年轻代？
+---
+### 如果有短暂的大量对象，应该怎么分配内存？
 
 
