--- a/_posts/interviews/面经/2023/2023-05-31-科大讯飞2.md
+++ b/_posts/interviews/面经/2023/2023-05-31-科大讯飞2.md
@@ -10,23 +10,48 @@ tags:
   
 ### 实现线程安全的方法有哪些？
 
+1. 互斥同步(阻塞同步)：
+ - synchronized关键字
+ - JUC包的ReentrantLock
+2. 非阻塞同步
+ - volatile关键字
+ - 原子类(AtomicInteger)   
+3. 无同步方案
+ - 可重入代码
+ - 线程本地存储ThreadLocal
+ 
+---
+### ABA问题
 
 
+---
 ### 线程之间通信有哪些方法？
 1. 共享内存：
 2. 信号量：信号量是一种同步原语，用于控制对共享资源的访问。线程可以使用信号量来协调它们之间的操作
 3. 互斥锁
-4. 条件变量：
+4. 条件变量
 
+---
 ### 什么是同步原语？
 同步原语是一种编程构造，用于协调多个线程或进程之间的操作，以确保它们以正确的顺序执行。同步原语包括互斥锁、条件变量、
 信号量等，它们提供了一种机制，使得在多线程或多进程的环境中，多个线程或进程可以协调它们之间的操作，以避免竞争条件和
 死锁等问题。
+
+---
 ### 进程之间通信有哪些方法？
+1. 管道pipe
+2. 信号量semaphore
+3. 共享内存shared memory
+4. 消息队列message queue
+5. 套接字socket
 
-
+---
 ### 线程池有4个空闲线程和有100个空闲线程有什么区别？
 
-
+---
 ### redis 哨兵节点和cluster节点有什么区别？什么情况使用哪种部署方式？
+这个题目应该说的是redis的哨兵和集群两种部署模式。
 
+- 哨兵模式：可以提供高可用性，可以检测redis主节点故障，发生故障时可以进行故障转移；适合简单主从架构的场景，不需要大规模数据集或者不需要水平扩展的场景。
+
+- 集群模式：是一种分布式的部署方案，数据分布在多个节点上，可以实现数据分片，支持弹性扩展；主要适用于大量数据、高并发的场景。
