--- a/_posts/interviews/面经/2023/2023-06-08-小满.md
+++ b/_posts/interviews/面经/2023/2023-06-08-小满.md
@@ -10,30 +10,77 @@ tags:
 ---
   
 ### 微服务部署的时候，怎么保证接口不受影响？
+一般在用K8s部署服务的时候会按照滚动更新的策略上线。逐渐增加新版本pod的数量。
+
 
 ---
 ### Dockerfile创建的层太多了怎么办？什么命令会创建一层？
+
+1. 合并多个RUN指令；
+2. 使用多阶段构建；
+3. COPY的时候，避免复制整个目录结构，只复制实际需要的文件；
+4. 清理临时文件，在RUN指令后安装了软件包之后可以再删除缓存文件临时文件；
+
 使用RUN、ADD、COPY指令都会新建一层镜像。
 
 ---
 ### guava cache会不会有同时大面积的缓存失效的情况？
+1. 相同的过期时间
 
 ---
 ### 发布服务的时候，怎么预热服务？
-提前加载缓存
-数据库的连接池预热
-innodb存储引擎有buffer_pool，缓存池，可以进行数据库的预热。
-redis将热点数据加载到缓存中
+- 提前加载缓存
+- 数据库的连接池预热
+- redis将热点数据加载到缓存中
+- innodb存储引擎有buffer_pool，缓存池，可以进行数据库的预热。
 
 ---
 ### mysql连接池
 
+功能：
+1. 连接复用
+2. 控制最大连接数
+3. 自动重连和恢复
+4. 监控管理
+
+```yaml
+spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      initial-size: 30 #初始化时建立物理连接的个数
+      max-active: 50 #连接池最大连接数
+      min-idle: 30 # 连接池中最小空闲连接数
+      max-wait: 6000 #获取连接最大等待时间，单位毫秒
+      query-timeout: 300000 #查询超时时间，单位毫秒
+      validation-query: SELECT 1 FROM DUAL #验证数据库服务可用性的查询SQL
+      pool-prepared-statements: true #标识位。是否开启预编译SQL，即PSCache
+      test-while-idle: true #从连接池获取连接后，如果超过被空闲剔除周期，是否做一次连接有效性检查
+      test-on-borrow: false #从连接池获取连接后，是否马上执行一次检查
+      test-on-return: false #归还连接到连接池时是否马上做一次检查
+      keep-alive: true #是否开启连接保活
+      time-between-eviction-runs-millis: 60000 #周期性剔除长时间呆在池子里未被使用的空闲连接, 1 min 一次
+```
+
 ---
 ### 有联合索引（a,b），查询where a= 1 and b = 2 和 where a = 1 and b = 2 and c = 4 的区别？
+1. 第一种可以完全覆盖索引，所以性能是最优的
+2. 第二种只能先用联合索引查找符合ab的结果集，然后再在ab的结果集里全表扫描查找c
 
 ---
 ### HTTP2.0比HTTP1.0有哪些改进？
 
-1. 首部压缩
-2. 多路复用
-3. 服务器主动推送
+1. 头部压缩：HTTP2使用HPACK算法对HTTP头部进行压缩，减少了传输的数据量；
+2. 多路复用：之前每个请求都需要建立一个新的TCP连接，会导致"线头阻塞"问题(也就是一个请求的延迟会影响后续请求的处理)，HTTP2允许在一个TCP连接上同时发送多个请求和响应。
+3. 服务器主动推送：服务器可以主动向客户端发送资源，比如当用户请求一个HTML页面的时候，服务器可以预测到该页面还需要哪些文件，可以提前推送给客户端。
+
+
+
+
+
+
+
+
+
+
+
