--- a/_posts/interviews/面经/2023/2023-06-13-飞常准.md
+++ b/_posts/interviews/面经/2023/2023-06-13-飞常准.md
@@ -47,12 +47,11 @@ tags:
 2. 在对list进行操作的时候，比如add元素，获取size大小的时候，可以使用ReentrantLock加锁保证互斥性
 3. 使用CopyOnWriteArrayList类型，这种类型可以保证读写操作互不影响
 4. 可以使用一些组件，比如Guava里可以将集合转化成线程安全的集合，Collections.synchronizedCollection(list)
-   
 
 ---
 ### 回顾一下四次挥手过程？
 
-关闭连接的时候，会需要进行四次挥手，
+关闭连接的时候，会需要进行四次挥手
 1. 主动关闭的一方会发送一个FIN包，表示服务端可以关闭连接了；
 2. 服务端收到了发送一个ACK响应，表示自己已经接收到关闭请求，但是程序还需要做一些后续操作，此时，服务端会进入CLOSE_WAIT状态；
 3. 服务端处理完事情之后，在给客户端发送FIN包；
