--- a/_posts/interviews/2023-03-14-Redis.md
+++ b/_posts/interviews/2023-03-14-Redis.md
@@ -13,17 +13,20 @@ tags:
 
 ### Redis的架构
 
+---
 ### Redis使用单线程为什么快？
 1. redis所有数据都存储在内存中，读写速度就比磁盘要快；
 2. 单线程避免了多线程的上下文切换，可以让redis专注于处理任务队列中的请求，不用考虑线程间的竞争和同步问题；
 3. IO多路复用和事件驱动模型：redis使用了IO多路复用技术，通过事件驱动的方式监听多个客户端连接，把请求放入队列中，不会因为某个请求阻塞整个服务；
 4. redis使用简单高效的数据结构，比如字符串、哈希表、列表、集合，能够在常数时间或对数时间内完成操作；
 
+---
 ### redis为什么设计成单线程？
 避免了多线程并发带来的复杂性和开销。因为reids的大部分操作都是内存操作，而非磁盘操作，因此
 单线程处理能够完全充分利用cpu的性能。单线程可以避免锁和上下文切换等多线程并发带来的开销，
 而且，redis还采用了非阻塞io模型，可以处理大量并发连接。
 
+---
 ### redis线程模式
 Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event handler）。
 - 文件事件处理器使用 I/O 多路复用（multiplexing）程序来同时监听多个套接字，并根据套接字执行的任务来为套接字关联不同的事件处理器。
@@ -33,12 +36,14 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 > 通过IO多路复用模型连接多个客户端，通过文件事件处理器分配事件处理。
 
+---
 ### 文件事件处理器组成
 - 多个socket套接字
 - IO多路复用程序
 - 文件事件分派器
 - 多种事件处理器（命令请求处理器、命令回复处理器、连接应答处理器、主从连接处理器）
 
+---
 ### Redis的数据结构有哪些？分别适用于哪些场景？
 - String：SDS
 - Hash
@@ -92,6 +97,14 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
   - 地理位置相关的应用，如“附近的人”、“附近的商家”等。
   - 物流配送路径规划，根据用户地址推荐最近的服务站。
 
+---
+### Redis的底层数据结构
+1. ZipList：压缩列表：用于存放少量数据的集合，例如hash、sorted set、list(元素少的话用ziplist或quicklist，元素多的话用linked list或dictionary)
+![img.png](../../assets/img2/redis_ziplist.png)
+
+
+
+---
 ### rdb和aof两种持久化机制比较？AOF重写？
 
 1. **RDB(Redis Database Backup):** RDB是一种快照机制，它会在指定的时间间隔内将内存中的数据集保存到磁盘上。
@@ -123,6 +136,7 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 > **AOF重写:** 执行BGREWRITEAOF命令的时候，创建新AOF文件时，会同时创建一个缓存区，保存这个期间服务器执行的写命令，然后把缓冲区内容加入新AOF文件，最后用新的AOF文件替换旧的AOF文件。
 
+---
 ### redis如何使用事务？
 
 可以使用MULTI和EXEC命令开启事务
@@ -134,9 +148,10 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 > Redis 的事务不支持回滚（Rollback）。如果事务中的某个命令执行失败，后续命令仍然会被继续执行，而不会撤销之前已经成功的操作。
 
+---
 ### Redis的几种部署方式？
 
-
+---
 ### 缓存更新策略有哪几种？内存淘汰机制？
 数据淘汰策略是指达到内存限制时，决定哪些数据应该被移除，释放空间，
 
@@ -151,8 +166,10 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 - volatile-lfu：仅针对设置了过期时间的键，使用LFU算法进行淘汰；
 - allkeys-lfu：从所有键中选择最不经常使用的键淘汰；
 
+---
 ### 常见的缓存读写策略有哪些？
 
+---
 ### Redis过期策略是什么？如何设置过期时间？
 - 惰性删除：访问键的时候再判断这个键是否过期，如果过期，再删除；
 - 定期删除：每个一段时间扫描检查，有过期的就删除。
@@ -163,8 +180,10 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 
 > redis采用惰性删除+定期删除
 
+---
 ### 如何判断缓存过期？
 
+---
 ### 项目中是如何使用redis的？redis使用场景有哪些？
 1. 缓存：把热点数据保存在redia中，减少对后端数据库的访问，提高响应速度；
 2. 会话存储：在分布式web应用里，redis可以用来集中管理用户会话信息，比传统的基于文件或数据库的会话存储方式会更快；
@@ -174,6 +193,7 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 6. 限流控制：可以利用redis的原子操作特性，进行API访问速率限制；
 7. redis支持地理空间索引，可以存储地理位置信息，可以开发类似于"附近的人"这样的功能；
 
+---
 ### 缓存穿透
 
 **缓存穿透:** 是指查询一个数据库中不存在的数据，因为缓存里也没有这份数据，所以每次都会直接访问数据库，如果这种请求量很大的话，可能会导致数据库压力比较大，
@@ -184,19 +204,23 @@ Redis 基于 Reactor 模式开发了自己的文件事件处理器（file event 
 请求的值是否存在于布隆过滤器中，如果布隆过滤器判断不存在，那么肯定不存在；如果判断存在，则可能存在，会有一定的误判。
 2. 缓存空对象，对数据库不存在的数据，可把它缓存起来，设置一个比较短的有效期。这样再次收到相同的请求时，可以直接从缓存中返回结果，而不是每次都去查询数据库。
 
+---
 ### 缓存击穿
 指请求的key对应的是热点数据，这些数据存在于数据库中，但是不存在于缓存中，这就会导致大量的请求直接到数据库中，对数据库造成巨大的压力。  
 解决方法设置针对热点数据永不过期或过期时间比较长。
 另外就是针对热点数据提前预热，将它存入缓存中并设置合理的过期时间。
 
+---
 ### 缓存雪崩
 指缓存在同一时间大面积的失效，导致大量的请求都直接落到数据库上，对数据库造成巨大的压力。或者是缓存服务本身宕机，导致雪崩。
 
 解决方法：如果是redis服务自身不可用，可以采用redis集群，避免单机出现问题导致整个缓存服务没办法使用。
 如果是热点缓存大面积同时失效，可以设置不同的失效时间，比如随机设置缓存的失效时间。或者设置二级缓存。
 
+---
 ### 如何保证缓存和数据库数据的一致性？
 
+---
 ### 如何使用redis实现分布式锁？
 1. 加锁：首先用redis的SET命令或SETNX命令实现加锁，SET key value NX EX 30
 2. 解锁：然后解锁的话需要确保只有持有锁的客户端才能删除锁，所以需要结合Lua脚本实现删除锁的操作。del key
@@ -253,19 +277,23 @@ try {
 redisson.shutdown();
 ```
 
+---
 ### redis的管道是什么？如何使用管道提高性能？
 
 redis支持管道，客户端可以一次发送多条命令，最后一起读取返回结果，这样只需要一次网络开销，速度就会得到提升，主要是解决网络io的性能问题。
 
+---
 ### redis的Lua脚本是什么？怎么使用？
 Lua脚本是一种在redis服务器端执行的脚本语言，用于执行一系列的redis命令。
 可以用于实现事务、锁、计数器等功能
 
 怎么使用：在客户端Jedis中调用eval、直接执行EVAL命令
 
+---
 ### redis的Lua脚本配合set nx命令实现分布式锁？
 脚本放在redis服务端，客户端通过EVAL命令执行脚本，获取锁。
 
+---
 ### redis的发布/订阅模式是什么？怎么使用？
 
 是一种消息通信模式，发布者将消息发送到一个或多个频道，订阅者监听特定频道的消息。
@@ -274,6 +302,7 @@ Lua脚本是一种在redis服务器端执行的脚本语言，用于执行一系
 - PUBLISH channel message 向指定频道发送消息；
 - UNSUBSCRIBE [channel [channel]] 停止接收指定频道的消息。
 
+---
 ### redis的限流是什么？如何实现限流？
 
 是控制访问速率的机制，防止某个资源被过度使用，比如API、数据库查询。用于流量控制、服务降级。
@@ -288,6 +317,7 @@ Redis中的限流算法有：
 
 - 如果是集群限流，需要使用分布式限流工具，比如Sentinel。
 
+---
 ### 如何保证redis高可用性？
 
 1. 持久化：保证服务意外停止后，数据还能被恢复；
@@ -296,6 +326,7 @@ Redis中的限流算法有：
 4. 集群模式：数据分片（数据分布在多个主节点上，每个主节点只负责一部分数据）、多副本机制
 5. 多机部署和容灾：同城双活、异地多活。
 
+---
 ### Redis的主从复制是什么？如何实现主从复制？
 是指redis可以配置多个从数据库，和主数据库保持同步，实现数据读写分离。主数据库可以读写操作，从数据库一般只读。这样可以分散读请求的压力。
 
@@ -310,6 +341,7 @@ Redis中的限流算法有：
 
 修改从服务器的redis.conf配置文件：slaveof 主服务器ip 主服务器端口
 
+---
 ### redis哨兵(Redis Sentinel)是什么？如何使用哨兵？
 
 哨兵是redis提供的高可用解决方案，会监控集群内主从节点的运行状态，当主节点宕机，会故障转移，自动将某个从节点选举出新的主节点。
